Fix icon spacing in dropdown menu items

--- a/netbox/project-static/styles/overrides/_tabler.scss
+++ b/netbox/project-static/styles/overrides/_tabler.scss
@@ -11,3 +11,9 @@
     display: inline-block;
   }
 }
+
+// Dropdown items
+.dropdown-item {
+  // Tabler sets display: flex
+  display: inline-block;;
+}
